--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,18 +1,18 @@
 <!--
-  Generated template for the RegisterPage page.
+  Generated template for the ProfilePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
-    <ion-title>Register</ion-title>
+  <ion-navbar>
+    <ion-title>ProfilePage</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <register></register>
+
 </ion-content>
