--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -1,15 +1,13 @@
-<!--
-  Generated template for the InboxPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="primary">
     <ion-title>Inbox</ion-title>
+    <!-- <ion-buttons end>
+      <button (click)="logout()" ion-button>
+        <ion-icon name="exit"></ion-icon>
+      </button>
+    </ion-buttons> -->
   </ion-navbar>
-
 </ion-header>
 
 
